[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/enemies/enemy.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=38]
resource_local_to_scene = true

[sub_resource type="CylinderShape" id=63]
radius = 1.5
height = 3.0

[sub_resource type="CapsuleShape" id=64]
radius = 1.5
height = 0.5

[sub_resource type="CylinderMesh" id=65]
top_radius = 1.5
bottom_radius = 1.5
height = 0.1

[sub_resource type="CylinderShape" id=37]
resource_local_to_scene = true
radius = 14.0
height = 12.0

[sub_resource type="CylinderShape" id=35]
resource_local_to_scene = true
height = 3.0

[node name="redMantis" type="KinematicBody"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
collision_layer = 16
collision_mask = 2050
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 1184.0
margin_right = 1280.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"

[node name="zeroPoint" type="Spatial" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="zeroPoint"]
transform = Transform( -4.37114e-08, 0.258819, 0.965926, 0, 0.965926, -0.258819, -1, -1.13133e-08, -4.2222e-08, 0, 0, 0 )
offset = Vector2( 0, 32 )
pixel_size = 0.07
animation = "attack_right"

[node name="hitbox" type="Area" parent="zeroPoint"]
collision_layer = 32
collision_mask = 0
monitoring = false

[node name="hitboxCollision" type="CollisionShape" parent="zeroPoint/hitbox"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 4, 0 )
shape = SubResource( 38 )
disabled = true

[node name="hurtbox" type="Area" parent="zeroPoint"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.6, 0 )
collision_layer = 0
collision_mask = 4108
monitorable = false

[node name="hurtboxCollision" type="CollisionShape" parent="zeroPoint/hurtbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 63 )
disabled = true

[node name="CollisionShapeGround" type="CollisionShape" parent="."]
transform = Transform( 0.965926, -1.48943e-09, -0.258819, -0.258819, -1.13133e-08, -0.965926, -1.48943e-09, 1, -1.13133e-08, 0.22, 1.714, 0 )
shape = SubResource( 64 )

[node name="shadowMaker" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
cast_shadow = 3
mesh = SubResource( 65 )
material/0 = null

[node name="aggro" type="Area" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="aggro"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 37 )

[node name="enemyPushback" type="Area" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2" type="CollisionShape" parent="enemyPushback"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 35 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="zeroPoint/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="zeroPoint/hurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="area_entered" from="aggro" to="." method="_on_aggro_area_entered"]
[connection signal="area_exited" from="aggro" to="." method="_on_aggro_area_exited"]
